src/objects/QIRS_Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>Action_Plan_Number__c</fullName>
        <label>Action Plan Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Comments__c</fullName>
        <label>Admin Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Guest Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_ID__c</fullName>
        <label>Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIRS_Number__c</fullName>
        <label>QIRS Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>QIRS Change Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>QIRS_Number__c</columns>
        <columns>Action_Plan_Number__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email_ID__c</columns>
        <columns>Comment__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Req-{0000000}</displayFormat>
        <label>QIRS_Change_Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QIRS Change Requests</pluralLabel>
    <recordTypes>
        <fullName>QIRS_Change_Request</fullName>
        <active>true</active>
        <label>QIRS Change Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>